syntax = "proto3";

package pb;

import "coin.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/jakub/aioportal/server/pb";

message UpdateCoinRequest {
  string coin_id = 1;
  optional string name = 2;
  optional string price = 3;
  optional string market_cap = 4;
  optional string circulating_supply = 5;
  optional string total_supply = 6;
  optional string max_supply = 7;
  optional string rank = 8;
  optional string volume = 9;
  optional string image_url = 10;
  optional string description = 11;
  optional string website = 12;
  repeated string social_media_links = 13;
  google.protobuf.Timestamp updated_At = 14;
}

message UpdateCoinResponse {
  Coin coin = 1;
}